Harden vault: ACLs, secret wiping, thread-safety, escape round-trip (build 136)
Four P2 fixes from the v1.4.2 security audit:

- Windows ACL (#18): SecureFiles.restrictWindows relied on File.setReadable/
  Writable, which are no-ops for NTFS ACLs. Use icacls /inheritance:r /grant:r
  to actually remove inherited ACEs and grant the owner Full control, with a
  legacy fallback.

- Heap hygiene (#19): CredentialStore.lock() now zeroes every cached
  CredentialEntry.password char[] before dropping the list, so plaintext
  passwords no longer linger on the heap after lock.

- Escape round-trip (#20): rewrote unesc() as a single left-to-right pass (like
  unescChars) so values with a literal backslash+n (e.g. Windows keyPaths) are
  no longer silently corrupted by chained String.replace.

- Thread-safety (#21): guard masterKey/entries/salt on the instance monitor
  (create/unlock/lock/CRUD/persist/isUnlocked synchronized; auto-lock check+lock
  in the same monitor, callback outside), fixing the persist() TOCTOU NPE, and
  return a List.copyOf snapshot from getAll().

Closes #18
Closes #19
Closes #20
Closes #21

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>